Add latest items use case, add toggling of portrait mode, add brush bg for item image, add hiding of brush bg
